--- a/moderncv.cls
+++ b/moderncv.cls
@@ -88,8 +88,8 @@
 % color package
 \ifpdf
   \RequirePackage[pdftex]{color}
-%%%\else
-  %%%\RequirePackage[dvips]{color}
+\else
+  \RequirePackage[dvips]{color}
 \fi
 
 % fontenc package
@@ -101,7 +101,7 @@
 % latin modern fonts
 \AtEndOfClass{%
   \if@lmodern
-    \RequirePackage{lmodern}}\fi
+    \RequirePackage{lmodern}\fi}
 
 % symbols like \Telefon, \Mobilefone, \Letter and \Email
 \RequirePackage{marvosym}
@@ -121,8 +121,8 @@
 \RequirePackage{url}
 \ifpdf
   \RequirePackage[pdftex]{hyperref}
-%%%\else
-%%%  \RequirePackage[dvips]{hyperref}\fi
+\else
+  \RequirePackage[dvips]{hyperref}\fi
 \AtEndOfClass{%
   \AtBeginDocument{%
     \hypersetup{%
@@ -151,9 +151,8 @@
 % graphics
 \ifpdf
   \RequirePackage[pdftex]{graphicx}
-%%%\else
-%%%  \RequirePackage[dvips]{graphicx}
-\fi
+\else
+  \RequirePackage[dvips]{graphicx}\fi
 
 % headers and footers
 \usepackage{fancyhdr}
@@ -307,7 +306,7 @@
     \end{longtable}%
 %    \phantomsection% reset the anchor for hyperrefs
 %    \par\null%
-    \@sectionopenfalse}\fi %%%
+    \@sectionopenfalse\fi}
 \AtEndDocument{\closesection{}}
 % usage: \section{<title>}, or \emptysection{}
 \newcommand*{\section}[1]{%
@@ -334,9 +333,8 @@
 \newcommand*{\cvline}[3][.25em]{%
   \if@firstcvlineofsection%
     \@firstcvlineofsectionfalse%
-  %%%\else%
-  %%%  \\[#1]
-  \fi%
+  \else%
+    \\[#1]\fi%
   \raggedleft\hintfont{#2} &#3}
 
 % usage (inside section}: \cvdoubleitem{subtitle}{text}{subtitle}{text}
@@ -408,8 +406,8 @@
       \fancypagestyle{plain}{%
         \fancyfoot[r]{\addressfont\color{quotecolor}\footnotesize\thepage/\pageref{lastpage}}}%
       \pagestyle{plain}}{}}%
-  \AtEndDocument{\label{lastpage}}}%%%
- % \fi
+  \AtEndDocument{\label{lastpage}}%
+  \fi}
 
 % thebibliography environment, for use with BibTeX
 \newcommand{\refname}{Publications}
