chore: clean comments

--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -54,17 +54,10 @@
 
 \email{obonhamcarter@allegheny.edu}              % optional, remove the line if not wanted
 
-%\extrainfo{\url{https://sites.google.com/a/unomaha.edu/oliver-bonham-carter/home}} % optional, remove the line if not wanted
-
-%\extrainfo{\url{www.cs.allegheny.edu/sites/obonhamcarter/index.html},\\Orcid: 0000-0001-9032-0398}
 \extrainfo{\url{http://oliverbonhamcarter.com} \\Orcid: 0000-0001-9032-0398}
 
 
 %\photo[64pt]{obc.png} % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
-
-
-
-%\quote{\textbf{Research Interests:} To apply my academic efforts to produce better mechanisms of data analysis in bioinformatics. To inspire my students to follow their dreams to successful careers in data analysis.}
 
 
 %\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
@@ -114,7 +107,7 @@
 \cventry{2009 -- 2016}{Graduate Research Assistant in Bioinformatics}{Peter Kiewit Institute}{University of Nebraska at Omaha}{}{}%{Post-translational modifications, protein interactions as a result of environmental stress, DNA gene prediction/detection using non-alignment, mathematically and statistically based methods for bioinformatics.}                
 %\vspace{-.4cm}
 
-%\cventry{Summers: 2007, 08, 09, 10}{Teaching and Counseling}{Aim for the Stars Math \& Science Summer Camp}{Omaha, Nebraska}{}{Teaching: Robotics and Logics. Counseling: Zoology}%\vspace{-.4cm}
+%\cventry{Summers: 2007, 08, 09, 10}{Science Camp: Teaching and Counseling}{Aim for the Stars Math \& Science Summer Camp}{Omaha, Nebraska}{}{Teaching: Robotics and Logics. Counseling: Zoology}%\vspace{-.4cm}
 
 \cventry{2007 -- 2009}{Graduate Teaching Assistant in Mathematics}{University of Nebraska at Omaha}{}{}{}%{Mathematics Graduate Teaching Assistant; College Algebra and Intermediate Algebra}              % arguments 3 to 6 are optional
 %\vspace{-.4cm}
@@ -129,14 +122,8 @@
 
 
 \cventry{2000 -- 2002}{Data Technician}{ValiGen S.A }{Paris, France}{}{Project Manager Assistant; Database Management, Wet-lab data analysis, Management of the documentation (\emph{SciDocs} literature mining project), Organization of internal database for scientific literature and documentation.}                % arguments 3 to 6 are optional
-
-%%\cventry{2000 -- 2002}{Valigen S.A.}{Paris, France}{Administration of literature database (\emph{SciDocs})}{}{}%{Mathematics Graduate Teaching Assistant; College Algebra and Intermediate Algebra}              % arguments 3 to 6 are optional
-%\vspace{-.4cm}
-
              
 %\vspace{-.4cm}
-
-%\cventry{2000 -- 2002}{Data Technician}{ValiGen S.A }{Paris, France}{}{Project Manager Assistant; Database Management, Wet-lab data analysis, Management of the documentation (\emph{SciDocs} literature mining project), Organization of internal database for scientific literature and documentation}                % arguments 3 to 6 are optional
 
 %\vspace{-.4cm}
 
@@ -144,7 +131,6 @@
  % arguments 3 to 6 are optional
 
 %\cventry{1995 -- 1997}{Lab Technician}{University of Nebraska Medical Center }{Omaha, Nebraska}{}{Statistical / computer-based work for study of blood cell receptors}                % arguments 3 to 6 are optional
-
 
 
 \section{\textbf{Teaching Experience}}
@@ -184,8 +170,6 @@
 \cventry{}{Python programming and games}{Crawford Central Elementary Schools}% Sprites, basic instruction to control, programming}
 {Outreach, Fall 2018 and Spring 2019}{Three sessions}{}{}
 
-%\cventry{}{Python programming and automation}{Elementary School, Python programming basics, sprites, games, simple graphics, problem solving using computation, etc.}{Outreach, Fall 2018}{2 Lessons}{}{}
-
 
 \subsection{\textbf{University of Nebraska}}
 
@@ -194,7 +178,6 @@
 \cventry{}{College Algebra}{Teaching Assistant, Department of Mathematics at University of Nebraska at Omaha}{Semesters (Fall and Spring): 2007 - 2009}{}{}{}
 
 \cventry{}{Intemediate Algebra}{Teaching Assistant, Department of Mathematics at University of Nebraska at Omaha}{Semesters (Fall and Spring): 2007 - 2009}{}{}{}
-
 
 
 \vspace{1.0cm}
@@ -212,12 +195,6 @@ As a data scientist, my research focuses on designing and developing software to
 %\cventry{month year}{who}{title}{which conference}{organizers}{}
 
 
-
-%\cventry{}{Responsible Computer Science Challenge, Mozilla Foundation}
-%{Teaching Responsible Computing Playbook}{Author: Managing Resistance, Service Learning}{}{}{}
-
-%{\small https://foundation.mozilla.org/en/what-we-fund/awards/teaching-responsible-computing-playbook/authors-and-contributors/}
-
 \cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{}{}
 %{https://foundation.mozilla.org/en/ what-we-fund/awards/teaching-responsible-computing-playbook/authors-and-contributors/}{}
 %\cventry{}{}{}{}
@@ -228,7 +205,6 @@ As a data scientist, my research focuses on designing and developing software to
 
 
 \cventry{May 2020}{Janyl Jumadinova and Oliver Bonham-Carter}{``Integrating Ethics in Teaching Artificial Intelligence."}{In the Proceedings of the 33rd International Artificial Intelligence Society Conference (poster), 2020. Conference gathering was cancelled due to the pandemic}{}{}
-
 
 \cventry{March 2020}{Oliver Bonham-Carter}{``BeagleTM: An adaptable text mining method for relationship discovery in literature."}{Future of Information and Communication Conference. Springer, Cham, 2020}{\url{https://github.com/developmentAC/beagleTM}}{}
 
@@ -474,6 +450,15 @@ As a data scientist, my research focuses on designing and developing software to
 \cvline{Video:}{OBS, OpensShot, green screening, microphone adjustment, video recording, YouTube video channel growing}
 \cvline{Mathematical:}{Maple, Mathematica, R-Statistic, SPSS, Octave, MatLab}{}{}
 
+
+\closesection{}                   % needed to renewcommands
+\renewcommand{\listitemsymbol}{-} % change the symbol for lists
+
+\end{document}
+
+#### JUNK BIN ####
+#### JUNK BIN ####
+
 %\vspace{-.5cm}
 %\section{\textbf{Interests}}
 
@@ -489,116 +474,6 @@ As a data scientist, my research focuses on designing and developing software to
 %\cvline{}{GitHub Website: \url{https://github.com/obonhamcarter}}{}{}{}
 %\cvline{}{Devising Research research class website: \url{https://devisingresearch.com/}}{}{}{}
 %\cvline{}{Computational Bioinformatics research class website: \url{https://computationalbioinformatics.com/}}{}{}
-
-
-\closesection{}                   % needed to renewcommands
-\renewcommand{\listitemsymbol}{-} % change the symbol for lists
-
-\end{document}
-
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-#### JUNK BIN ####
-
-
-
-%\section{Extra 1}
-%\cvlistitem{Item 1}
-%\cvlistitem{Item 2}
-%\cvlistitem[+]{Item 3}            % optional other symbol
-
-%\section{Extra 2}
-%\cvlistdoubleitem[\Neutral]{Item 1}{Item 4}
-%\cvlistdoubleitem[\Neutral]{Item 2}{Item 5}
-%\cvlistdoubleitem[\Neutral]{Item 3}{}
-
-%% Publications from a BibTeX file
-%\nocite{*}
-%\bibliographystyle{plain}
-%\bibliography{publications}       % 'publications' is the name of a BibTeX file
-
-
-
-\cventry{ }{Data Analytics}{Exploratory steps in analysis, plotting,  statistics, models, text analysis}{CSMPSC301}{}{}
-\cventry{ }{Data bases}{SQL, MongoDB, Neo4J; database design, query, modification,and maintenance}{CMPSC312}{}{}
-\cventry{ }{Bioinformatics}{Genetic sequences, genes structure, protein folding, alignment, analysis}{CMPSC300}{}{}
-\cventry{ }{Operating Systems}{Kernels, memory pages, CPU and software}{CMPSC400}{}{}
-\cventry{ }{Junior Seminar}{Research project proposal preparation for senior comp}{CMPSC580}{}{}
-\cventry{ }{Senior comps}{Senior student advisor for comp project}{CMPSC600 and CMPSC610}{}{}
-\cventry{ }{Academic Discord}{First Year students: Data usage, comprehension and basic analysis}{FS101}{}{}
-\cventry{ }{Theory of Computation CMPSC}{Turing Machines, automata, symbols, languages, programmable machines}{}{}{}
-\cventry{ }{OutReach}{Teaching Data Analytics to high-school students}{}{}{}
-
-
-
-
-
-
-
-
-\color{red}
-\section{Selected Classes Taught}
-\vspace{-.4cm}
-%newest
-
-%\cventry{}{Class Types}{Brief description}{}{}{}{}
-\cventry{}{Academic Discource I}{A class for success for incoming and first-year students}{Taught once}{}{}{} 
-\cventry{}{Data Analytics for \url{https://scholarly.co/}}{An online class about for the isolation and analysis of statistically-discovered trends and patterns from data sets. Includes material of ethics and responsibility in data science research}{Taught once}{}{}{} 
-
-\cventry{}{Operating Systems}{Programming skill, concepts and creation of algorithmic modules in the scope of computer operating systems. Topics include: CPU, memory access, memory pages, kernels, software launching and running and similar concepts}{}{}{}{}
-\cventry{}{Senior Thesis}{First and /or second reader for senior comprehensive projects}{}{}{}{}
-\cventry{}{Data Analytics}{Programming and analysis for the extraction of meaningful information from raw data using statistical models, programming and data science. Includes material of ethics and responsibility in data science research}{}{}{}{}
-\cventry{}{Bioinformatics}{DNA, Protein sequence analysis, gene expression, proteomics, post-tranalational modifications and in relation to domains, etc}{}{}{}{}
-\cventry{}{Discrete Structures}{Mathematics and programming, estimation, graph theory, probability statistics, numerical analysis, etc}{}{}{}{}
-\cventry{}{Databases}{SQL schema design, programming syntax to store and extract data}{}{}{}{}
-\cventry{}{Junior Seminar}{Theory, research and methods for success in CS careers}{}{}{}{}
-\cventry{}{Theory of Computing}{Logic, turing machines, automata, designs of input-output control mechanisms}{}{}{}{}
-\cventry{}{Internship Seminar}{A course designed to help students get into internships to allow them to gain experience and skill in their areas of Computer Science}{}{}{}{} 
-
-
-
-%\cvline{2008 -- 2009}{Math Club: Secretary}{University of Nebraska at Omaha, Nebraska}{}{}
-%\cvline{2007 -- 2008}{Math Club: Vice President}{University of Nebraska at Omaha, Nebraska}{}{}
-
-
-
-
-
-
-%backup 
-%\cventry{2010 -- 2016}{Ph.D. in IT - Bioinformatics}{University of Nebraska, PKI (UNO), Omaha}{\textit{Bioinformatics}}{Advisors: Dr. Dhundy (Kiran) Bastola and Dr. Hesham Ali}{}  % arguments 3 to 6 are optional
-
-%\cventry{2007 -- 2009}{MS - Mathematics}{University of Nebraska (UNO), Omaha}{}{\textit{Mathematics with applications in Bioinformatics/Mathematical Biology}}{}  % arguments 3 to 6 are optional
-
-%\cventry{2004 -- 2007}{Undergraduate Mathematics Course Work}{University of Nebraska, Omaha}{}{\textit{Preparation for Masters graduate school}}{}  % arguments 3 to 6 are optional
-
-%\cventry{2003 -- 2004}{Undergraduate Mathematics Course Work}{Conservatoire National des Arts et M\'etiers, Paris, France}{}{\textit{General Mathematics with applications in Science}}{}  % arguments 3 to 6 are optional
-
-%\cventry{2002}{English Technical Writing Workshop}{Creighton University}{}{}{}
-
-%\cventry{1998 -- 1999}{French Cultural Studies}{Universit\'e de La Sorbonne, Paris, France}{}{\emph{La Civilisation Française}:\emph{French Linguistics, Culture and Literature}}{}  % arguments 3 to 6 are optional
-
-%\cventry{1993 -- 1998}{BS - Biology}{Creighton University, Omaha}{}{\textit{Biology, biostatistics, and Biochemistry }}{}  % arguments 
-
-%\cventry{1994 -- 1995}{Diplom\'e}{Universit\'e Stendhal-Grenoble 3}{}{\textit{``Perfection of Oral French'' and ``Perfection of Written French''}}{}  % arguments 3 to 6 are optional
-
 
 
 %% end of file 
