--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -303,6 +303,10 @@ As a data scientist, my research focuses on designing and developing software to
 
 \subsection{\textbf{Committees}}
 \vspace{-0.4cm}
+
+\cventry{2023}{Internal Member of the Search Committee for the Department of Computer Science}{}{}{}{}
+\cventry{2021}{External member of the Search Committee for the Languages Department}{}{}{}{}
+
 \cventry{2019 - 2022}{Health Professions Advisory Committee (HPAC)}{}{}{}{}
 \cventry{2016 - 2017}{International Faculty}{}{}{}{}
 
