--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -138,37 +138,48 @@
 
 \subsection{\textbf{Allegheny College}}
 
+
 \cventry{}{Academic Discourse I}{FS 101}%{Theme: Working with data, communication, manipulation, data ethics, etc}
 {Semester: Fall 2021}{}{}{}
 
-\cventry{}{Discrete Structures}{CMPSC  102}%{Theme: Working with data, communication, manipulation, data ethics, etc}
-{Semester: Fall 2018, Fall 2019, Fall 2022}{}{}{}
+\cventry{}{Allegheny Enrichment: Data Analytics}{Area High School classes}%{Theme: Working with data, communication, manipulation, data ethics, etc}
+{Fall 2023}{}{}{}
 
-\cventry{}{Theory of Computation}{CMPSC 230}%{Turing machines, automata, symantics, symbols and language of programming, the halting problem, etc}
-{Fall 2016}{}{}{}
+\cventry{}{Allegheny Enrichment: Data Analytics}{Area High School classes}%{Theme: Working with data, communication, manipulation, data ethics, etc}
+{Spring 2022}{}{}{}
+
 
 \cventry{}{Bioinformatics}{CMPSC 300}%{DNA, RNA, Protein analysis, sequence analysis, dynamic programming, Python tools and libraries for bioinformatics research, protein folding models, etc}
 {Semesters: Spring 2016, Fall 2017, Fall 2019, Spring 2021, Fall 2022}{}{}{}
+
 
 \cventry{}{Data Analytics}{CMPSC 301}%{R programming, analysis, plotting, correlations, statistical models, ethics in research, etc}
 {Semesters: Fall 2017, Fall 2018, Fall 2020, Spring 2020, Summer 2021 (Scholarly), Fall 2021, Spring 2023}{}{}{}
 
 \cventry{}{Database Systems}{CMPSC 305}%{SQL, No-SQL, Python, queries, data manipulation, design, creation, maintenance, MongoDB, Neo4J, networks, management systems, etc}
-{Semesters: Fall 2016, Spring 2018, Spring 2019, Fall 2020, Spring 2022}{}{}{}
+{Semesters: Fall 2016, Spring 2018, Spring 2019, Fall 2020, Spring 2022, Fall 2023}{}{}{}
 
-\cventry{}{Operating Systems}{CMPSC 400}%{Kernal functions, memory functions, CPU, bus communications, python tools to model race conditions, creation of own OS from machine language, etc}
-{Semesters: Spring 2017, Spring 2020}{}{}{}
+
+\cventry{}{Discrete Structures}{CMPSC  102}%{Theme: Working with data, communication, manipulation, data ethics, etc}
+{Semester: Fall 2018, Fall 2019, Fall 2022}{}{}{}
+
 
 \cventry{}{Junior Seminar}{CMPSC 580}%{Project design for senior-level thesis work, idea generation, feasibility, prototypes, experimental design, writing research proposal documents, etc}
 {Semesters: Spring 2017, Spring 2018, Spring 2019, Spring 2021, Spring 2022, Spring 2023}{}{}{}
 
-\cventry{}{Senior Thesis I and II}{First and second reader}{Semesters (Fall and Spring): 2016-2023}{34 projects as first reader, 17 projects as second reader}{}{}{}
 
-\cventry{}{Exploratory data analytics}{Crawford Central High Schools} %{Online tools to visualize and manipulate of data, using python to manually manipulate data, create and study plots to visualize trends, etc}
-{Outreach, Spring 2023}{Five sessions}{}{}
+\cventry{}{Operating Systems}{CMPSC 400}%{Kernal functions, memory functions, CPU, bus communications, python tools to model race conditions, creation of own OS from machine language, etc}
+{Semesters: Spring 2017, Spring 2020}{}{}{}
+
 
 \cventry{}{Python programming and games}{Crawford Central Elementary Schools}% Sprites, basic instruction to control, programming}
 {Outreach, Fall 2018 and Spring 2019}{Three sessions}{}{}
+
+
+\cventry{}{Senior Thesis I and II}{First and second reader}{Semesters (Fall and Spring): 2016-2024}{40 projects as first reader, 22 projects as second reader}{}{}{}
+
+\cventry{}{Theory of Computation}{CMPSC 230}%{Turing machines, automata, symantics, symbols and language of programming, the halting problem, etc}
+{Fall 2016}{}{}{}
 
 
 \subsection{\textbf{University of Nebraska}}
@@ -195,9 +206,18 @@ As a data scientist, my research focuses on designing and developing software to
 %\cventry{month year}{who}{title}{which conference}{organizers}{}
 
 
-\cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{}{}
 %{https://foundation.mozilla.org/en/ what-we-fund/awards/teaching-responsible-computing-playbook/authors-and-contributors/}{}
 %\cventry{}{}{}{}
+
+
+\cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
+
+
+\cventry{September 2023 (\emph{accepted)}}{Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in
+Bioinformatics and its Related Disciplines."}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
+
+
+\cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{}{}
 
 \cventry{March 2021}{Oliver Bonham-Carter and Yee Mon Thu}{``GenExSt: A Tool to Identify Correlation of Gene Expression after Normalization with Housekeeping Genes."}{Future of Information and Communication Conference. Springer, Cham, 2021}{\url{https://github.com/developmentAC/genExSt}}{}
 
