--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -213,8 +213,7 @@ As a data scientist, my research focuses on designing and developing software to
 \cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
 
 
-\cventry{September 2023 (\emph{accepted)}}{Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in
-Bioinformatics and its Related Disciplines."}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
+\cventry{September 2023 (\emph{accepted)}}{Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines."}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
 
 
 \cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{}{}
@@ -262,12 +261,13 @@ Bioinformatics and its Related Disciplines."}{Future of Information and Communic
 
 \subsection{\textbf{Publications in Preparation}}
 \vspace{-.4cm}
-\cventry{Under construction}{Tentative Title: \emph{Text mining for terms of ethical influence in Bioinformatics and its Related Disciplines}}{A comparison of ethical terms appearing in research articles in bioinformaics, as well as across its parental disciplines}{}{}{}
+\cventry{Under construction}{Tentative Title: \emph{Mapping Ethical Continuance and Methodological Components Across Bioinformatics Literature}}{A review of the ethical impacts of articles on others regarding related concepts or project design}{}{}{}
 
 \vspace{1.0cm}
 \subsection{\textbf{Current Research Projects}}
 %\vspace{-0.4cm}
-\cventry{}{BeagleTM project development}{Adding code to project to increase efficiency in code, add database support, provide more informative plots, etc.}{Current project: \url{https://github.com/developmentAC/beagleTM}}{}{}
+
+\cventry{}{BeagleTM project development}{Text analysis platform to determine connections between scientific articles.}{Current project: \url{https://github.com/developmentAC/beagleTM}}{}{}
 
 \cventry{}{Gene Expression}{Programming a new analysis dashboard to determine the co-expression of genes with are likely playing roles in causing breast cancer onset.}{Current project: \url{https://github.com/developmentAC/genExSt}}{}{}
 
@@ -278,8 +278,13 @@ Bioinformatics and its Related Disciplines."}{Future of Information and Communic
 %\cventry{}{}{Web: \url{https://github.com/obonhamcarter}}
 \cventry{}{GitHub Projects Portfolio}{Web: \url{https://github.com/obonhamcarter}}{An assortment of projects to facilitate teaching and or research}{}{}{}
 
+\cventry{}{SenderReceiver}{A Python direct messaging tool.}{}%{GitHub clone link: \url{https://github.com/developmentAC/gradeAlert.git}}
+{Web: \url{https://github.com/developmentAC/senderReceiver}}{}{}
+
+
 \cventry{}{GradeAlert}{A Python tool to help with reporting grades from CSV files for GitHub Classroom courses.}{}%{GitHub clone link: \url{https://github.com/developmentAC/gradeAlert.git}}
 {Web: \url{https://github.com/developmentAC/gradeAlert}}{}{}
+
 
 \cventry{}{Morse-Encode-Decoder}{A Python learning tool to convert text to Morse code and Morse code to text.}{}%{GitHub clone link: \url{https://github.com/developmentAC/Morse-Encode-Decoder.git}}
 {Web: \url{https://github.com/developmentAC/Morse-Encode-Decoder}}{}{}
