--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -317,9 +317,13 @@ As a data scientist, my research focuses on designing and developing software to
 \subsection{\textbf{Open Source Curriculum}}
 \vspace{-.4cm}
 
-\cventry{}{Research Development}{\url{https://devisingresearch.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach juniors how to create a research idea, narrow it, determine feasibility and complete objectives. Other objectives include: gaining skill for applied research methodologies and for writing proposals}{}{}
+\cventry{}{Research Development}{\url{https://devisingresearch.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach juniors how to create a research idea, narrow it, determine feasibility and complete objectives. Other objectives include: gaining skill for applied research methodologies and for writing proposals.}{}{}
 
-\cventry{}{Bioinformatics}{\url{https://computationalbioinformatics.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach bioinformatics at the college level. Objectives: Students learn how to use DNA, RNA and protein analysis to answer research questions. Other objectives include: learning how to write research papers in bioinformatics the health-life sciences}{}{}
+\cventry{}{Bioinformatics}{\url{https://computationalbioinformatics.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach bioinformatics at the college level. Objectives: Students learn how to use DNA, RNA and protein analysis to answer research questions. Other objectives include: learning how to write research papers in bioinformatics the health-life sciences.}{}{}
+
+\cventry{2022, 2021}{CS Fundraising Channel on YouTube}{\url{https://www.youtube.com/@alleghenycs}}{A collection of videos that I helped to make for our recent ``Love at First Byte'' fundraiser at the Department of Computer Information and Science.}{}{}
+
+
 
 % cs529: internship
 
