--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -154,7 +154,7 @@
 
 
 \cventry{}{Data Analytics}{CMPSC 301}%{R programming, analysis, plotting, correlations, statistical models, ethics in research, etc}
-{Semesters: Fall 2017, Fall 2018, Fall 2020, Spring 2020, Summer 2021 (Scholarly), Fall 2021, Spring 2023}{}{}{}
+{Semesters: Fall 2017, Fall 2018, Fall 2020, Spring 2020, Summer 2021 (Scholarly), Fall 2021, Spring 2023, Allegheny Enrichment}{}{}{}
 
 \cventry{}{Database Systems}{CMPSC 305}%{SQL, No-SQL, Python, queries, data manipulation, design, creation, maintenance, MongoDB, Neo4J, networks, management systems, etc}
 {Semesters: Fall 2016, Spring 2018, Spring 2019, Fall 2020, Spring 2022, Fall 2023}{}{}{}
@@ -215,8 +215,12 @@ As a data scientist, my research focuses on designing and developing software to
 
 \cventry{September 2023 (\emph{accepted)}}{Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines."}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
 
+\cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{Playbook made possible by the Responsible Computer Science Challenge, funded by Omidyar Network, Mozilla Foundation, Schmidt Futures, and Craig Newmark Philanthropies}{}
 
-\cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{}{}
+\cventry{August 2021}{Teaching Responsible Computing Playbook: Service Learning}{contributing author}{Mozilla Foundation}{}{Playbook made possible by the Responsible Computer Science Challenge, funded by Omidyar Network, Mozilla Foundation, Schmidt Futures, and Craig Newmark Philanthropies}{}
+
+
+%\cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{}{}
 
 \cventry{March 2021}{Oliver Bonham-Carter and Yee Mon Thu}{``GenExSt: A Tool to Identify Correlation of Gene Expression after Normalization with Housekeeping Genes."}{Future of Information and Communication Conference. Springer, Cham, 2021}{\url{https://github.com/developmentAC/genExSt}}{}
 
