--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -84,7 +84,10 @@
 %\vspace{-.4cm}
 \cventry{2002}{English Technical Writing Workshop}{Creighton University, Omaha, NE}{}{}{}
 
-\cventry{1998 -- 2000}{French Cultural Studies}{Universit\'e de La Sorbonne, Paris, France}{}{Dipl\^{o}m\'{e}: \emph{La Civilisation Française}:\emph{French Linguistics, Culture and Literature}}{}  % arguments 3 to 6 are optional
+\cventry{1998 -- 2000}{French Cultural Studies}{Universit\'e de La Sorbonne, Paris, France}{}{Dipl\^{o}m\'{e}: \emph{Cours de Civilisation Française de la Sorbonne}:\emph{French Linguistics, Culture and Literature}}{}  % arguments 3 to 6 are optional
+%\vspace{-.4cm}
+
+%\cventry{1998 -- 2000}{French Cultural Studies}{Universit\'e de La Sorbonne, Paris, France}{}{Dipl\^{o}m\'{e}: \emph{La Civilisation Française: Culture et Littérature}:\emph{French Linguistics, Culture and Literature}}{}  % arguments 3 to 6 are optional
 %\vspace{-.4cm}
 
 
@@ -143,10 +146,9 @@
 {Semester: Fall 2021}{}{}{}
 
 \cventry{}{Allegheny Enrichment: Data Analytics}{Area High School classes}%{Theme: Working with data, communication, manipulation, data ethics, etc}
-{Fall 2023}{}{}{}
+{Spring 2022, Fall 2023}{}{}{}
 
-\cventry{}{Allegheny Enrichment: Data Analytics}{Area High School classes}%{Theme: Working with data, communication, manipulation, data ethics, etc}
-{Spring 2022}{}{}{}
+%\cventry{}{Allegheny Enrichment: Data Analytics}{Area High School classes}%{Theme: Working with data, communication, manipulation, data ethics, etc}{Spring 2022}{}{}{}
 
 
 \cventry{}{Bioinformatics}{CMPSC 300}%{DNA, RNA, Protein analysis, sequence analysis, dynamic programming, Python tools and libraries for bioinformatics research, protein folding models, etc}
@@ -161,11 +163,11 @@
 
 
 \cventry{}{Discrete Structures}{CMPSC  102}%{Theme: Working with data, communication, manipulation, data ethics, etc}
-{Semester: Fall 2018, Fall 2019, Fall 2022}{}{}{}
+{Semester: Fall 2018, Fall 2019, Fall 2022, Spring 2024}{}{}{}
 
 
 \cventry{}{Junior Seminar}{CMPSC 580}%{Project design for senior-level thesis work, idea generation, feasibility, prototypes, experimental design, writing research proposal documents, etc}
-{Semesters: Spring 2017, Spring 2018, Spring 2019, Spring 2021, Spring 2022, Spring 2023}{}{}{}
+{Semesters: Spring 2017, Spring 2018, Spring 2019, Spring 2021, Spring 2022, Spring 2023, Spring 2024}{}{}{}
 
 
 \cventry{}{Operating Systems}{CMPSC 400}%{Kernal functions, memory functions, CPU, bus communications, python tools to model race conditions, creation of own OS from machine language, etc}
@@ -325,7 +327,7 @@ As a data scientist, my research focuses on designing and developing software to
 
 \cventry{}{Bioinformatics}{\url{https://computationalbioinformatics.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach bioinformatics at the college level. Objectives: Students learn how to use DNA, RNA and protein analysis to answer research questions. Other objectives include: learning how to write research papers in bioinformatics the health-life sciences.}{}{}
 
-\cventry{2022, 2021}{CS Fundraising Channel on YouTube}{\url{https://www.youtube.com/@alleghenycs}}{A collection of videos that I helped to make for our recent ``Love at First Byte'' fundraiser at the Department of Computer Information and Science.}{}{}
+\cventry{2023, 2022, 2021}{CS Fundraising and Media Channel development on YouTube}{\url{https://www.youtube.com/@alleghenycis}}{A collection of videos created for department fundraising initiatives \{``Power-Up'',``Love at First Byte'', and ``Reboot''\}' at the Department of Computer Information and Science.}{}{}
 
 
 
@@ -341,6 +343,7 @@ As a data scientist, my research focuses on designing and developing software to
 \cventry{2021}{External member of the Search Committee for the Languages Department}{}{}{}{}
 
 \cventry{2019 - 2022}{Health Professions Advisory Committee (HPAC)}{}{}{}{}
+\cventry{2017}{Quantitative Reasoning (QR) Rubric: Instrument Development and Writing Group for College Academic Bulletin Tags}{}{}{}{}
 \cventry{2016 - 2017}{International Faculty}{}{}{}{}
 
 \subsection{\textbf{Selected Peer Review Service}}
@@ -472,20 +475,20 @@ As a data scientist, my research focuses on designing and developing software to
 %\cvlanguage{French}{Fluent}{\emph{Oh, mais oui!}}{}
 
 \cvline{English}{Maternal}{}
-\cvline{French}{Fluent:}{ reading, writing and speaking}{(\emph{\^{O}, Mais oui!)}}
+\cvline{French}{Fluent:}{ reading, writing and speaking }{(\emph{\^{O}, Mais Oui!)}}
 %\vspace{-.5cm}
 
 \section{\textbf{Computer Skills/Software}}
 
 \vspace{-.5cm}
 \cvline{OS:}{Linux, Mac, Windows}{}{}
-\cvline{Web development:}{HUGO, Jekyll, 11nty, JavaScript, HTML, page layout, Streamlit, Flask}{}{}
+\cvline{Web development:}{11nty, CSS Page design \& layout, Django, Flask, HTML, HUGO, JavaScript, Jekyll, Streamlit}{}{}
 \cvline{General:}{Git and GitHub programming, OpenOffice}{}{}
-\cvline{Programming:}{Python, JavaScript, C/C++, Java, \LaTeX, R-statistic, GoLang}{}{}
-\cvline{Graphics:}{DALL$\cdot$E, GIMP, PhotoShop, Krita, Inkscape, lender, Creation via \url{www.canva.com}}{}{}
-\cvline{Cloud Computing:}{Docker, Kubernetes, AWS, VPN's, cloud computing setup and operations}{}{}
-\cvline{Video:}{OBS, OpensShot, green screening, microphone adjustment, video recording, YouTube video channel growing}
-\cvline{Mathematical:}{Maple, Mathematica, R-Statistic, SPSS, Octave, MatLab}{}{}
+\cvline{Programming:}{C/C++, GoLang, JavaScript, Java, MongoDB, Neo4J, Python, \LaTeX, R-statistic, SQL}{}{}
+\cvline{Graphics:}{Creation via \url{https://www.canva.com}, DALL$\cdot$E, GIMP, Inkscape, Krita, PhotoShop, Stable Diffusion (AI-image generation)}{}{}
+\cvline{Cloud Computing:}{Amazon Web Service (AWS), Cloud computing setup and operations, Docker, Kubernetes, Virtual Private Network (VPN) implementation}{}{}
+\cvline{Video:}{Green screening, Microphone adjustment, OBS, OpensShot, video recording, YouTube video channel growing}
+\cvline{Mathematical:}{Maple, Mathematica, MatLab, Octave, RStudio, R-Statistic, SPSS}{}{}
 
 
 \closesection{}                   % needed to renewcommands
