--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -339,6 +339,7 @@ As a data scientist, my research focuses on designing and developing software to
 \subsection{\textbf{Committees}}
 \vspace{-0.4cm}
 
+\cventry{2024}{Institutional Effectiveness Committee (Assessment of Education)}{}{}{}{}
 \cventry{2023}{Internal Member of the Search Committee for the Department of Computer Science}{}{}{}{}
 \cventry{2021}{External member of the Search Committee for the Languages Department}{}{}{}{}
 
@@ -375,6 +376,7 @@ As a data scientist, my research focuses on designing and developing software to
 \vspace{-.4cm}
 % arguments 3 to 6 are optional
 
+\cventry{2024}{ReBoot Campaign: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
 \cventry{2023}{Love at First Byte: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
 
 \cventry{2022}{Power-Up: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
