--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -211,6 +211,9 @@ As a data scientist, my research focuses on designing and developing software to
 %{https://foundation.mozilla.org/en/ what-we-fund/awards/teaching-responsible-computing-playbook/authors-and-contributors/}{}
 %\cventry{}{}{}{}
 
+\cventry{May 2024}{Oliver Bonham-Carter}{``Breaking Barriers in Research Projects:
+BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scientific Literature"}{CNB-MAC / PyCon, 2024}{Poster: \url{https://www.oliverbonhamcarter.com/talks/pycon2024_poster_bonham-carter.pdf}}{}
+
 
 \cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
 
@@ -487,7 +490,7 @@ As a data scientist, my research focuses on designing and developing software to
 \cvline{Web development:}{11nty, CSS Page design \& layout, Django, Flask, HTML, HUGO, JavaScript, Jekyll, Streamlit}{}{}
 \cvline{General:}{Git and GitHub programming, OpenOffice}{}{}
 \cvline{Programming:}{C/C++, GoLang, JavaScript, Java, MongoDB, Neo4J, Python, \LaTeX, R-statistic, SQL}{}{}
-\cvline{Graphics:}{Creation via \url{https://www.canva.com}, DALL$\cdot$E, GIMP, Inkscape, Krita, PhotoShop, Stable Diffusion (AI-image generation)}{}{}
+\cvline{Graphics:}{Creation via \url{https://www.canva.com}, DALL$\cdot$E, GIMP, Inkscape, Krita, PhotoShop, Stable Diffusion (AI-image generation), Manim (Mathematical graphics in Python)}{}{}
 \cvline{Cloud Computing:}{Amazon Web Service (AWS), Cloud computing setup and operations, Docker, Kubernetes, Virtual Private Network (VPN) implementation}{}{}
 \cvline{Video:}{Green screening, Microphone adjustment, OBS, OpensShot, video recording, YouTube video channel growing}
 \cvline{Mathematical:}{Maple, Mathematica, MatLab, Octave, RStudio, R-Statistic, SPSS}{}{}
