--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -4,7 +4,7 @@
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License version 1.3c,
 % available at http://www.latex-project.org/lppl/.
-
+% release: 2.0.1
 %moderncvthemecasual.sty
 
 
