add release notes to tex

--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -4,9 +4,14 @@
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License version 1.3c,
 % available at http://www.latex-project.org/lppl/.
-% release: 2.0.1
+% release: 2.0.2
 %moderncvthemecasual.sty
-
+% Notes for GitHub to make a release
+%git commit -m "add release 2.0.2"
+%git tag cv_obc-2.0.2
+%#git tag cv_obc.pdf
+%git push -u origin main --tags
+% then upload the file manually at last resort.
 
 \documentclass[11pt,a4paper]{moderncv}
 \vspace{-.5cm}
