--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -223,7 +223,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
 
 
-\cventry{September 2023 (\emph{accepted)}}{Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines."}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
+\cventry{September 2023} {Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines"}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
 
 \cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{Playbook made possible by the Responsible Computer Science Challenge, funded by Omidyar Network, Mozilla Foundation, Schmidt Futures, and Craig Newmark Philanthropies}{}
 
